# ml

./: .gitignore  README.md  attention.py  mlp.py  pyproject.toml  util.py
core/jax/: jit.py  util.py
core/jax/sharding/: mlp_dp.py  mlp_fsdp.py  mlp_tp.py
core/numpy/: masking.py  positional_encoding_rope.py  positional_encoding_sinusoidal.py  roofline_plot_mha.py  roofline_plot_mlp.py  softmax.py
core/torch/: attention.py  attention_disaggregated.py  transformer.py
core/torch/sharding/: mlp_dp.py  mlp_fsdp.py  mlp_pp.py  mlp_tp.py
loss/: l2.py
sharding/: engine.py  interface.py  mlp.py  mlp_dp.py  mlp_fsdp.py  mlp_tp.py
tutorial/jax/: README.md  condition.py  jit.py  mlp.py  mlp_jit.py  sharding.py  util.py
tutorial/jax/sharding/: mlp_dp.py  mlp_fsdp.py  mlp_tp.py
tutorial/numpy/: normalization.py  positional_encoding_rope.py  positional_encoding_rope_neox.py  positional_encoding_sinusoidal.py
tutorial/torch/: attention.py  attention_disaggregated.py  linear.py  mlp.py  normalization_rms.py  residual.py  softmax.py  transformer.py
tutorial/torch/sharding/: mlp_dp.py  mlp_fsdp.py  mlp_pp.py  mlp_tp.py
