[project]
name = "ml"
version = "0.1.0"
description = ""
authors = [
    {name = "KookaS", email = "olivier.charrez@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10,<3.13"
dependencies = [
    "jax[cpu]>=0.4.35",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["core", "loss", "model"]
