[project]
name = "ml"
version = "0.1.0"
description = ""
authors = [
    {name = "KookaS", email = "olivier.charrez@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10,<3.13"
dependencies = [
    "jax[cpu]>=0.4.35",
    "matplotlib>=3.10.8",
    "tensorboard>=2.20.0",
    "torch>=2.9.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["core", "loss", "model"]
